--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.html
@@ -49,10 +49,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('tipo').invalid && addressForm.get('tipo').touched) ||
                     (addressForm.get('tipo').invalid && estaEditando)
@@ -104,10 +104,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('objeto').invalid && addressForm.get('objeto').touched) ||
                     (addressForm.get('objeto').invalid && estaEditando)
@@ -167,10 +167,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (addressForm.get('numeroRadicado').invalid && addressForm.get('numeroRadicado').touched) ||
                       (addressForm.get('numeroRadicado').invalid && estaEditando)
@@ -213,10 +213,10 @@
                     <img
                       class="icon-incompleto--img"
                       src="assets/img/icon/incompleto.svg"
-                                    alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
                       *ngIf="
                         (addressForm.get('cartaAutorizacionET').invalid &&
                           addressForm.get('cartaAutorizacionET').touched) ||
@@ -261,10 +261,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (addressForm.get('departemento').invalid && addressForm.get('departemento').touched) ||
                       (addressForm.get('departemento').invalid && estaEditando)
@@ -308,10 +308,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (addressForm.get('municipio').invalid && addressForm.get('municipio').touched) ||
                       (addressForm.get('municipio').invalid && estaEditando)
@@ -355,10 +355,10 @@
                     <img
                       class="icon-incompleto--img"
                       src="assets/img/icon/incompleto.svg"
-                                    alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
                       *ngIf="
                         (addressForm.get('llaveMEN').invalid && addressForm.get('llaveMEN').touched) ||
                         (addressForm.get('llaveMEN').invalid && estaEditando)
@@ -383,8 +383,7 @@
                     class="label-left"
                     for="numeroContrato"
                     [class.color-secondaryColor]="
-                      (addressForm.get('numeroContrato').invalid && addressForm.get('numeroContrato').touched) ||
-                      (addressForm.get('numeroContrato').invalid && estaEditando)
+                      (myFilter.invalid && myFilter.touched) || (myFilter.invalid && estaEditando)
                     "
                   >
                     Número de contrato
@@ -393,10 +392,10 @@
                 <div class="col d-flex">
                   <mat-form-field class="full-width">
                     <!--<input  matInput
-                                            #numeroContrato
-                                            type="text"
-                                            maxlength="10"
-                                            formControlName="numeroContrato">-->
+                          #numeroContrato
+                          type="text"
+                          maxlength="10"
+                          formControlName="numeroContrato">-->
                     <input
                       matInput
                       #nombre2
@@ -422,14 +421,11 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
-                    *ngIf="
-                      (addressForm.get('numeroContrato').invalid && addressForm.get('numeroContrato').touched) ||
-                      (addressForm.get('numeroContrato').invalid && estaEditando)
-                    "
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
+                    *ngIf="(myFilter.invalid && myFilter.touched) || (myFilter.invalid && estaEditando)"
                   />
                 </span>
               </div>
@@ -505,10 +501,10 @@
           <img
             class="icon-incompleto--img"
             src="assets/img/icon/incompleto.svg"
-                          alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+            alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
             *ngIf="
               (addressForm.get('observacionLimiteEspecial').invalid &&
                 addressForm.get('observacionLimiteEspecial').touched) ||
@@ -552,10 +548,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('tipoAportante').invalid && addressForm.get('tipoAportante').touched) ||
                     (addressForm.get('tipoAportante').invalid && estaEditando)
@@ -593,10 +589,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('nombreAportante').invalid && addressForm.get('nombreAportante').touched) ||
                     (addressForm.get('nombreAportante').invalid && estaEditando)
@@ -646,10 +642,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (addressForm.get('valor').invalid && addressForm.get('valor').touched) ||
                       (addressForm.get('valor').invalid && estaEditando)
@@ -688,10 +684,10 @@
         <img
           class="icon-incompleto--img"
           src="assets/img/icon/incompleto.svg"
-                        alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+          alt="este campo es requerido"
+          [matTooltipPosition]="'above'"
+          matTooltip="Debe ingresar la información en el campo para continuar"
+          matTooltipClass="info-tooltip"
           *ngIf="
             (addressForm.get('url').invalid && addressForm.get('url').touched) ||
             (addressForm.get('url').invalid && estaEditando)
