--- a/asivamosffie.web/asivamosffie/src/assets/scss/_quill-editor.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_quill-editor.scss
@@ -84,8 +84,7 @@
   }
 
   &--max-height.card .ql-container.ql-snow {
-    max-height: calc(96% + 3px);
-    min-height: 3em;
+    height: calc(100% - 40px);
   }
 
   &.card {
