--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
@@ -85,8 +85,8 @@
         </div>
         <div class="col d-flex">
           <quill-editor
-            class="quill-editor-style card position-relative"
-            [styles]="editorStyle"
+            class="quill-editor-style card position-relative quill-editor-style--max-height"
+            
             [modules]="config"
             (onContentChanged)="maxLength($event, 5000)"
             formControlName="desarrolloSolicitud"
@@ -212,8 +212,8 @@
         </div>
         <div class="col d-flex">
           <quill-editor
-            class="quill-editor-style card position-relative"
-            [styles]="editorStyle"
+            class="quill-editor-style card position-relative quill-editor-style--max-height"
+            
             [modules]="config"
             required
             (onContentChanged)="maxLength($event, 5000)"
