--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-contratacion/form-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-contratacion/form-contratacion.component.html
@@ -117,6 +117,7 @@
         <p><b>Fecha del trámite</b> <span class="color-titulo ml-1em"> {{ fechaTramite | date: 'dd/MM/yyyy' }} </span></p>
         <app-form-registro-tramite  [fechaTramite]="contratacion?.contrato.length > 0 ? contratacion?.contrato[0].fechaTramite : fechaTramite"
                                     [dataFormulario]="form"
+                                    [estaEditando]="estaEditando"
                                     [contratacionId]="contratacion?.contratacionId"
                                     [contratoId]="contratacion?.contrato.length > 0 ? contratacion?.contrato[0].contratoId : null">
         </app-form-registro-tramite>
