--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/generacion-acta-ini-f-i-prc/generacion-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/generacion-acta-ini-f-i-prc/generacion-acta-ini-f-i-prc.component.html
@@ -135,10 +135,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (addressForm.get('fechaActaInicioFUnoPreconstruccion')?.invalid &&
                         addressForm.get('fechaActaInicioFUnoPreconstruccion').touched) ||
@@ -182,10 +182,10 @@
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
-                                alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('fechaPrevistaTerminacion').invalid &&
                       addressForm.get('fechaPrevistaTerminacion').touched) ||
@@ -200,9 +200,7 @@
           <div class="col-md-12" style="padding-left: 0px">
             <div class="row">
               <div class="pr-1">
-                <label class="label-left" [ngClass]="{ 'color-secondaryColor': this.esRojo == true }"
-                  >Plazo de ejecución fase 1 – Preconstrucción:</label
-                >
+                <label class="label-left"> Plazo de ejecución fase 1 – Preconstrucción: </label>
               </div>
               <div class="col d-flex d-flex-row">
                 <label
@@ -222,7 +220,7 @@
                     min="1"
                     max="99"
                     required
-                    (ngModelChange)="getValueMeses( $event )"
+                    (ngModelChange)="getValueMeses($event)"
                     (keypress)="number($event)"
                     onKeyPress="if(this.value.length>=this.maxLength) return false;"
                     oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
@@ -247,10 +245,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (addressForm.get('mesPlazoEjFase1').invalid && addressForm.get('mesPlazoEjFase1').touched) ||
                       (addressForm.get('mesPlazoEjFase1').invalid && estaEditando)
@@ -273,7 +271,7 @@
                     min="1"
                     max="31"
                     required
-                    (ngModelChange)="getValueDias( $event )"
+                    (ngModelChange)="getValueDias($event)"
                     (keypress)="number($event)"
                     onKeyPress="if(this.value.length>=this.maxLength) return false;if(this.value>=this.max) return false;"
                     oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
@@ -298,10 +296,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (addressForm.get('diasPlazoEjFase1').invalid && addressForm.get('diasPlazoEjFase1').touched) ||
                       (addressForm.get('diasPlazoEjFase1').invalid && estaEditando)
@@ -316,13 +314,7 @@
           <div class="col-md-9" style="padding-left: 0px">
             <div class="row">
               <div class="pr-1">
-                <label
-                  class="label-left"
-                  [ngClass]="{
-                    'color-secondaryColor': addressForm.controls.mesPlazoEjFase2.invalid && this.esRojo == true
-                  }"
-                  >Plazo de ejecución fase 2 – Construcción:</label
-                >
+                <label class="label-left"> Plazo de ejecución fase 2 – Construcción: </label>
               </div>
               <div class="col d-flex d-flex-row">
                 <label
@@ -350,16 +342,16 @@
                   />
                 </mat-form-field>
                 <span class="contador">
-                  {{ 2 - getSizeInput( addressForm.get('mesPlazoEjFase2').value ) }}
+                  {{ 2 - getSizeInput(addressForm.get('mesPlazoEjFase2').value) }}
                 </span>
                 <span class="icon-incompleto">
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (addressForm.get('mesPlazoEjFase2').invalid && addressForm.get('mesPlazoEjFase2').touched) ||
                       (addressForm.get('mesPlazoEjFase2').invalid && estaEditando)
@@ -406,10 +398,10 @@
                   <img
                     class="icon-incompleto--img"
                     src="assets/img/icon/incompleto.svg"
-                                  alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
                     *ngIf="
                       (addressForm.get('diasPlazoEjFase2').invalid && addressForm.get('diasPlazoEjFase2').touched) ||
                       (addressForm.get('diasPlazoEjFase2').invalid && estaEditando)
@@ -421,36 +413,43 @@
           </div>
         </div>
         <div class="d-flex align-items-start">
-          <div
-            class="text-area-quill noDecorated"
-            [class.color-secondaryColor]="
-              (addressForm.get('objeto')?.invalid && addressForm.get('objeto').touched) ||
-              (addressForm.get('objeto')?.invalid && estaEditando)
-            "
-          >
-            <label class="label-left" for="observacionesEspeciales">Observaciones o consideraciones especiales</label>
+          <div class="text-area-quill noDecorated">
+            <label
+              class="label-left"
+              for="observacionesEspeciales"
+              [class.color-secondaryColor]="
+                (addressForm.get('observacionesEspeciales')?.invalid &&
+                  addressForm.get('observacionesEspeciales').touched) ||
+                (addressForm.get('observacionesEspeciales')?.invalid && estaEditando)
+              "
+            >
+              Observaciones o consideraciones especiales
+            </label>
             <quill-editor
-              class="quill-editor-style card "
+              class="quill-editor-style card"
               [styles]="editorStyle"
               [modules]="config"
               (onContentChanged)="maxLength($event, 500)"
               formControlName="observacionesEspeciales"
+              [class.invalid]="
+                (addressForm.get('observacionesEspeciales').invalid &&
+                  addressForm.get('observacionesEspeciales').touched) ||
+                (addressForm.get('observacionesEspeciales').invalid && estaEditando)
+              "
               #observaciones
               required
             >
             </quill-editor>
           </div>
           <span class="contador auxMarg" *ngIf="addressForm.get('observacionesEspeciales').value !== null">
-            {{500 - (textoLimpio(observaciones.quillEditor,500))}}
+            {{ 500 - textoLimpio(observaciones.quillEditor, 500) }}
           </span>
-          <span class="contador auxMarg" *ngIf="addressForm.get('observacionesEspeciales').value === null">
-              500
-          </span>
-          <span class="icon-incompleto">
+          <span class="contador auxMarg" *ngIf="addressForm.get('observacionesEspeciales').value === null"> 500 </span>
+          <span class="icon-incompleto auxMarg">
             <img
               class="icon-incompleto--img"
               src="assets/img/icon/incompleto.svg"
-                            alt="este campo es requerido"
+              alt="este campo es requerido"
               [matTooltipPosition]="'above'"
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
