--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/expansion-verificar-requisitos/expansion-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/expansion-verificar-requisitos/expansion-verificar-requisitos.component.html
@@ -125,8 +125,18 @@
             </div>
           </div>
           <div class="d-flex align-items-center" *ngIf="perfil['tieneObservaciones'] === true">
-            <div class="text-area-quill">
-              <label class="text-area-quill--label size-label colorMainColor">
+            <div
+              class="text-area-quill"
+              [class.color-secondaryColor]="
+              !perfil['verificarObservacion'] && estaEditando
+              "
+            >
+              <label
+                class="text-area-quill--label size-label colorMainColor"
+                [class.colorMainColor]="
+                perfil['verificarObservacion'] && estaEditando
+                "
+              >
                 Observaciones a las hojas de vida del contratista de obra
               </label>
               <quill-editor
@@ -141,11 +151,9 @@
               </quill-editor>
             </div>
             <span class="contador miles" *ngIf="perfil['verificarObservacion'] !== null">
-              {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
+              {{ 1000 - textoLimpio(observaciones.quillEditor, 1000) }}
             </span>
-            <span class="contador miles" *ngIf="perfil['verificarObservacion'] === null">
-                1000
-            </span>
+            <span class="contador miles" *ngIf="perfil['verificarObservacion'] === null"> 1000 </span>
             <span class="icon-incompleto">
               <img
                 class="icon-incompleto--img"
