--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-seguimiento-diario/components/form-observaciones/form-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-seguimiento-diario/components/form-observaciones/form-observaciones.component.html
@@ -5,7 +5,8 @@
         <div class="row">
           <div class="pr-1">
             <label class="label-left" for="tieneObservaciones"
-              [class.color-secondaryColor]="addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched">
+              [class.color-secondaryColor]="(addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
+              (addressForm.get('tieneObservaciones').invalid && estaEditando)">
               ¿Desde la supervisión tiene observaciones al registro del seguimiento diario?
             </label>
           </div>
@@ -16,24 +17,46 @@
             </mat-radio-group>
             <span class="required-form-group">*</span>
           </div>
+          <span class="icon-incompleto">
+            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+              [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+              matTooltipClass="info-tooltip" *ngIf="
+                (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
+                (addressForm.get('tieneObservaciones').invalid && estaEditando)
+              " />
+          </span>
         </div>
       </div>
     </div>
   </div>
   <div class="d-flex align-items-center var-main-gris mt-2em animatedDown"
     *ngIf="addressForm.get('tieneObservaciones').value === true">
-    <div class="text-area-quill">
-      <label for="observacion" class="text-area-quill--label header">
+    <div class="text-area-quill" [class.color-secondaryColor]="
+    (addressForm.get('observacion').invalid && addressForm.get('observacion').touched) ||
+    (addressForm.get('observacion').invalid && estaEditando)
+  ">
+      <label for="observacion" class="text-area-quill--label header" style=" font-size: 16px"
+      [class.color-secondaryColor]="
+    (addressForm.get('observacion').invalid && addressForm.get('observacion').touched) ||
+    (addressForm.get('observacion').invalid && estaEditando)">
         Observaciones al seguimiento diario
       </label>
       <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config"
-        (onContentChanged)="maxLength($event, 500)" formControlName="observacion" required></quill-editor>
+        (onContentChanged)="maxLength($event, 1000)" formControlName="observacion" required #observacion></quill-editor>
     </div>
     <span class="contador miles" *ngIf="addressForm.get('observacion').value !== null">
-      {{1000 - (textoLimpio(addressForm.get('observacion').value)>500?500:textoLimpio(addressForm.get('observacion').value))}}
+      {{ 1000 - textoLimpio(observacion.quillEditor, 1000) }}
     </span>
     <span class="contador miles" *ngIf="addressForm.get('observacion').value === null">
       1000
+    </span>
+    <span class="icon-incompleto">
+      <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+        [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+        matTooltipClass="info-tooltip" *ngIf="
+          (addressForm.get('observacion').invalid && addressForm.get('observacion').touched) ||
+          (addressForm.get('observacion').invalid && estaEditando)
+        " />
     </span>
   </div>
   <div class="text-center mb-2em">
